cmd/s3-management/k8s/01-s3-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-management
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: s3-management
  template:
    metadata:
      labels:
        app: s3-management
    spec:
      containers:
      - name: s3-management
        image: entropypool/s3-management:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: s3-management
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 8080
