cmd/s3-management/k8s/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3-management-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: s3-management
    k8s.kuboard.cn/workload: s3-management
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.npool.top
    http:
      paths:
      - path: /s3-management
        backend:
          serviceName: s3-management
          servicePort: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3-management-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: s3-management
    k8s.kuboard.cn/workload: s3-management
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.xpool.top
    http:
      paths:
      - path: /s3-management
        backend:
          serviceName: s3-management
          servicePort: http
